--- a/homepage/style_homepage.css
+++ b/homepage/style_homepage.css
@@ -41,7 +41,7 @@ html {
     width: 100%;
     margin: auto;
     font-size: 19px;
-    min-height: 100px;
+    min-height: 100%;
   }
   
   
@@ -162,7 +162,7 @@ html {
     color: white;
   
     /* Background image */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/VTdML0x/accessories-apple-business-1038628.jpg);
+       background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("https://source.unsplash.com/1600x900/?vacation");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -239,8 +239,6 @@ html {
   #service-features {
     display: flex;
     flex-direction: row;
-    /* Change flow-direction to "column" in the responsive design for the features to stack
-    one on top of another. */
     justify-content: space-around;
     margin-top: 2%;
     padding-bottom: 3%;
@@ -268,7 +266,7 @@ html {
   }
   
   #feature {
-    width: 20%;
+    width: 25%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -277,6 +275,8 @@ html {
     border: solid 1px #bebebe;
     box-shadow: 1px 2px 15px #bebebe;
     border-radius: 20px;
+    border-width: 3px ;
+    border-color: #ff7b8b;
   }
   
   #feature img {
@@ -945,13 +945,13 @@ html {
     }
   
     #responsive-nav-bar ul {
-      list-style: none;
+      list-style:none;
     }
   
     #responsive-nav-bar li {
       text-align: center;
       font-size: 23px;
-      margin-top: 40%;
+      margin-top: 10%;
     }
   
     #responsive-first-item {
@@ -1004,7 +1004,8 @@ html {
       color: white;
   
       /* Background image */
-      background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/VTdML0x/accessories-apple-business-1038628.jpg);
+      background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), 
+      url("https://source.unsplash.com/1600x900/?vacation");
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
@@ -1418,7 +1419,8 @@ html {
       color: white;
   
       /* Background image */
-      background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/VTdML0x/accessories-apple-business-1038628.jpg);
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), 
+      url("https://source.unsplash.com/1600x900/?vacation");
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
