--- a/booking-form/style.css
+++ b/booking-form/style.css
@@ -191,14 +191,4 @@ body {
 }
 
            
-.white-mode {
-  text-decoration: none;
-  padding: 17px 40px;
-  background-color: yellow;
-  border-radius: 3px;
-  color: black;
-  transition: .35s ease-in-out;
-  position: absolute;
-  left: 15px;
-  bottom: 15px
-}
+/*---------------------------------------------*/
