feat: added ticket validation with qrcode

--- a/booking-form/style.css
+++ b/booking-form/style.css
@@ -192,3 +192,9 @@ body {
 
            
 /*---------------------------------------------*/
+.qr-img {
+  margin-top:10px;
+}
+.qr-img img {
+  width:30%;
+}
