--- a/booking-form/style.css
+++ b/booking-form/style.css
@@ -102,12 +102,14 @@ header .planIc {
   position: absolute;
   opacity: 0;
   transition: all 0.3s;
+  border-radius: 25px;
 }
 .styled-checkbox + label {
   font-size: 14px;
   cursor: pointer;
   position: relative;
   padding: 0;
+  border-radius: 25px;
 }
 .styled-checkbox + label:before {
   background: #ccc;
@@ -117,6 +119,7 @@ header .planIc {
   margin-right: 10px;
   vertical-align: text-top;
   width: 20px;
+  border-radius: 25px;
 }
 .styled-checkbox:hover + label:before {
   background: #ff3c41;
@@ -136,6 +139,7 @@ header .planIc {
   position: absolute;
   width: 2px;
   transform: rotate(45deg);
+  border-radius: 25px;
 }
 #bodyCotainer {
   padding-top: 55px;
@@ -380,3 +384,4 @@ header .planIc {
     font-size: 30px;
   }
 }
+
