--- a/flight-search/public/style.css
+++ b/flight-search/public/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-  background-image: url("https://i.pinimg.com/564x/cf/60/0d/cf600d274bbf9d27a96ae3020121eac7.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2021/03/04/11/56/background-6067769_960_720.jpg");
 }
 
 .card-body {
